trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,7 +290,7 @@ main #home {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: calc(100vh + 20px);
+    height: calc(100vh);
   }
   #home .lg-heading {
     line-height: 1;
@@ -299,7 +299,7 @@ main #home {
   }
 
   #about {
-    margin-top: calc(100vh + 5vh);
+    margin-top: calc(100vh + 1vh);
   }
 
   .about-info {
